styles.css
:root {
  --main-color: #087F8C;
  --hover-color: #084C61;
}

.graph-container {
  max-width: 75vw;
  margin: auto;
  padding-bottom: 1em;
  text-align: center;
}

.btn {
  margin-top: 1em;
}

.btn-info {
  background-color: var(--main-color);
}

.btn-info:hover {
  background-color: var(--hover-color);
  border-color: var(--hover-color);
}

.btn-outline-info {
  color: var(--main-color);
  border-color: var(--main-color);
}

.btn-outline-info:hover {
  background-color: var(--hover-color);
  border-color: var(--hover-color);

}

.countryInfoContainer {
  text-align: center;
  display: flex;
}

#countryName,
#region,
#capital,
#area {
  margin: 0;
}

.flagContainer {
  text-align: right;
  flex: 50%;
  padding: 5px;
  margin-top: 1em;
}

.countryInfo {
  text-align: left;
  flex: 50%;
  padding: 5px;
}

#flag {
  max-width: 100px;
  height: auto;
  border: 1px solid #ddd;
}

#countryName {
  font-weight: bold;
}

footer {
  /* position: fixed; */
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: var(--main-color);
  color: white;
  font-size: small;
  text-align: center;
}

#graphTypeButton {
  display: none;
  margin: auto;
}

.jumbotron {
  background-color: var(--main-color);
  color: white;
}

#github-link {
  color: white;
}

#github-link:hover {
  color: var(--hover-color);

}

#github-link > i {
  font-size: 24px;
}

.error {
  color: #DB3A34;
  font-size: 12px;
  padding-top: 1em;
}

